# wallyo-backend

./: .gitignore  README.md  agents.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/core/: auth.py  config.py  logger.py  supabase.py
app/features/storage/: __init__.py  repository.py  routes.py  schemas.py  service.py
app/features/storage/exceptions/: latest_json_already_exists_error.py
style-guide/: architecture.md
tests/core/: test_auth.py  test_config.py
tests/features/: __init__.py
tests/features/storage/: __init__.py  test_repository.py  test_routes.py  test_schemas.py  test_service.py
