[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallyo-server"
version = "1.0.0"
description = "Backup Storage API for encrypted SQLite backups"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "supabase>=2.8.0",
    "httpx>=0.24,<0.28",
    "websockets>=12.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "mypy==1.8.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# Allow untyped decorators: FastAPI route decorators (@app.get, @app.post, etc.)
# don't have complete type stubs, but function bodies and return types are still checked
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# FastAPI and other third-party libraries
[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "supabase.*",
    "dotenv.*",
]
ignore_missing_imports = true

